--- a/HelloWorld.vcxproj
+++ b/HelloWorld.vcxproj
@@ -141,10 +141,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="mail8.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="main2.cpp" />
     <ClCompile Include="main3.cpp" />
     <ClCompile Include="main4.cpp" />
+    <ClCompile Include="main5.cpp" />
+    <ClCompile Include="main6.cpp" />
+    <ClCompile Include="main7.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="employeestruct.h" />
